feat: 布局样式调整

--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ button {
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #f9f9f9;
+    background-color: #ecf5ff;
     cursor: pointer;
     transition: border-color 0.25s;
 }
